--- a/static/starter-template.css
+++ b/static/starter-template.css
@@ -7,7 +7,8 @@ body {
 }
 pre{
   text-align: left;
-  overflow-wrap: normal
+  overflow-wrap: normal;
+  white-space: pre;
 }
 
 pre.code, pre.sourceCode, pre.shell, .faqs {
